feat: best time to buy and sell stock

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ include_directories(.)
 add_executable(Leetcode
         TwoSum.cpp
         MedianOfTwoSortedArrays.cpp
+        BestTimeToBuyAndSellStock.cpp
 )
